logs/Slang/chapter-7/arrays/packed/querying-functions/dimensions.sv.log
name: arrays-packed-quering-functions-dimensions
description: Test quering functions support on packed arrays
should_fail: 0
tags: 7.11 7.4.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/packed/querying-functions/dimensions.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/packed/querying-functions/dimensions.sv:12:33: error: use of undeclared identifier '$dimensions'
	$display(":assert: (%d == 1)", $dimensions(arr));
	                               ^~~~~~~~~~~
